[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
itertools = "0.10.5"
nom = "7.1.3"

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5.rs"

[[bin]]
name = "day_6"
path = "src/day_6.rs"

[[bin]]
name = "day_7"
path = "src/day_7.rs"
