[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
eframe = { version = "0.22.0", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "glow",
  "wayland",
  "persistence",
] }
egui = "0.22.0"
itertools = "0.10.5"
nom = "7.1.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.37"

[[bin]]
name = "day_1"
path = "src/day_1.rs"

[[bin]]
name = "day_2"
path = "src/day_2.rs"

[[bin]]
name = "day_3"
path = "src/day_3.rs"

[[bin]]
name = "day_4"
path = "src/day_4.rs"

[[bin]]
name = "day_5"
path = "src/day_5.rs"

[[bin]]
name = "day_6"
path = "src/day_6.rs"

[[bin]]
name = "day_7"
path = "src/day_7.rs"

[[bin]]
name = "day_8"
path = "src/day_8.rs"

[[bin]]
name = "day_9"
path = "src/day_9.rs"

[[bin]]
name = "day_10"
path = "src/day_10.rs"

[[bin]]
name = "day_11"
path = "src/day_11.rs"

[[bin]]
name = "day_12"
path = "src/day_12.rs"
